# audio-visualizer

./: Cargo.toml  README.md  run-release.sh
src/: capture_macos_sck.rs  capture_windows.rs  main.rs
