[package]
name = "audio-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio playback and capture (WASAPI on Windows, ALSA on Linux - built-in backends)
cpal = "0.15"

# FFT for frequency analysis
rustfft = "6.1"

# Simple 2D rendering
macroquad = "0.4"

[profile.release]
opt-level = 3
